migrate build to vite

--- a/.env.development
+++ b/.env.development
@@ -2,4 +2,8 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API_PRO = 'http://localhost:8099/'
+VITE_APP_TITLE=小区物业管理系统
+VITE_APP_BASE_API=/dev-api
+VITE_APP_BASE_API_PRO=http://localhost:8099/
+VUE_APP_BASE_API=/dev-api
+VUE_APP_BASE_API_PRO='http://localhost:8099/'
