--- a/.env.production
+++ b/.env.production
@@ -2,5 +2,8 @@
 ENV = 'production'
 
 # base api
-VUE_APP_BASE_API = '/prod-api'
-VUE_APP_BASE_API_PRO = 'http://localhost:8099/'
+VITE_APP_TITLE=小区物业管理系统
+VITE_APP_BASE_API=/prod-api
+VITE_APP_BASE_API_PRO=http://localhost:8099/
+VUE_APP_BASE_API='/prod-api'
+VUE_APP_BASE_API_PRO='http://localhost:8099/'
