--- a/.env.staging
+++ b/.env.staging
@@ -1,8 +1,9 @@
-NODE_ENV = production
-
 # just a flag
 ENV = 'staging'
 
 # base api
-VUE_APP_BASE_API = '/stage-api'
-
+VITE_APP_TITLE=小区物业管理系统
+VITE_APP_BASE_API=/stage-api
+VITE_APP_BASE_API_PRO=http://localhost:8099/
+VUE_APP_BASE_API='/stage-api'
+VUE_APP_BASE_API_PRO='http://localhost:8099/'
