--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "A vue admin template with Element UI & axios & iconfont & permission control & lint",
   "author": "Pan <panfree23@gmail.com>",
   "scripts": {
-    "dev": "vue-cli-service serve --open",
-    "build:prod": "vue-cli-service build",
-    "build:stage": "vue-cli-service build --mode staging",
-    "preview": "node build/index.js --preview",
+    "dev": "vite",
+    "build": "vite build",
+    "build:prod": "vite build --mode production",
+    "build:stage": "vite build --mode staging",
+    "preview": "vite preview",
     "svgo": "svgo -f src/icons/svg --config=src/icons/svgo.yml",
     "lint": "eslint --ext .js,.vue src",
-    "test:unit": "jest --clearCache && vue-cli-service test:unit",
+    "test:unit": "jest --clearCache && jest",
     "test:ci": "npm run lint && npm run test:unit"
   },
   "dependencies": {
@@ -27,29 +28,24 @@
     "vuex": "3.1.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue2": "^2.3.1",
     "@vue/cli-plugin-babel": "4.4.4",
-    "@vue/cli-plugin-eslint": "4.4.4",
-    "@vue/cli-plugin-unit-jest": "4.4.4",
-    "@vue/cli-service": "4.4.4",
     "@vue/test-utils": "1.0.0-beta.29",
     "autoprefixer": "9.5.1",
     "babel-eslint": "10.1.0",
     "babel-jest": "23.6.0",
     "babel-plugin-dynamic-import-node": "2.3.3",
     "chalk": "2.4.2",
-    "connect": "3.6.6",
-    "deasync": "^0.1.29",
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
-    "html-webpack-plugin": "3.2.0",
     "mockjs": "1.0.1-beta3",
-    "runjs": "4.3.2",
+    "jest": "23.6.0",
     "sass": "1.26.8",
     "sass-loader": "8.0.2",
-    "script-ext-html-webpack-plugin": "2.1.3",
-    "serve-static": "1.13.2",
-    "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
+    "vite": "^4.5.0",
+    "vite-plugin-svg-icons": "^2.0.1",
+    "vue-jest": "3.0.7",
     "vue-template-compiler": "2.6.10"
   },
   "browserslist": [
